namespace java com.igool.rpc.db.model.thrift
struct VehicleOperator {
			1:i32 id,
			2:string sfz,
			3:string company,
			4:i32 czlx,
			5:string dycl,
			6:string createTime
	}